// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders checked correctly 1`] = `
<div
  className="ms-Checkbox is-checked is-enabled"
>
  <input
    aria-checked="true"
    aria-label="Standard checkbox"
    checked={true}
    className=""
    id="checkbox-0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="ms-Checkbox-label"
    htmlFor="checkbox-0"
  >
    <div
      className="ms-Checkbox-checkbox"
    >
      <i
        aria-hidden={true}
        className=
            ms-Checkbox-checkmark
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="CheckMark"
      >
        
      </i>
    </div>
    <span
      aria-hidden="true"
      className="ms-Checkbox-text"
    >
      Standard checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox renders indeterminate correctly 1`] = `
<div
  className="ms-Checkbox is-enabled"
>
  <input
    aria-checked="mixed"
    aria-label="Standard checkbox"
    checked={false}
    className=""
    id="checkbox-0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="ms-Checkbox-label"
    htmlFor="checkbox-0"
  >
    <div
      className="ms-Checkbox-checkbox"
    >
      <i
        aria-hidden={true}
        className=
            ms-Checkbox-checkmark
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="CheckMark"
      >
        
      </i>
    </div>
    <span
      aria-hidden="true"
      className="ms-Checkbox-text"
    >
      Standard checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox renders unchecked correctly 1`] = `
<div
  className="ms-Checkbox is-enabled"
>
  <input
    aria-checked="false"
    aria-label="Standard checkbox"
    checked={false}
    className=""
    id="checkbox-0"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="ms-Checkbox-label"
    htmlFor="checkbox-0"
  >
    <div
      className="ms-Checkbox-checkbox"
    >
      <i
        aria-hidden={true}
        className=
            ms-Checkbox-checkmark
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-style: normal;
              font-weight: normal;
              speak: none;
            }
        data-icon-name="CheckMark"
      >
        
      </i>
    </div>
    <span
      aria-hidden="true"
      className="ms-Checkbox-text"
    >
      Standard checkbox
    </span>
  </label>
</div>
`;
